[Feature] Change quantile and weights

--- a/ExploreResults.ipynb
+++ b/ExploreResults.ipynb
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "upper_quan = y_pred.quantile(0.99999)\n",
+    "upper_quan = y_pred.quantile(0.9999)\n",
     "upper_quan"
    ]
   },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +272,7 @@
     }
    ],
    "source": [
-    "y_pred[y_pred>= upper_quan] = 0.95*y_pred[y_pred>= upper_quan] + 0.05*mean_value"
+    "y_pred[y_pred>= upper_quan] = 0.9*y_pred[y_pred>= upper_quan] + 0.1*mean_value\n"
    ]
   },
   {
