--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1907,13 +1907,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "train_df = pd.read_table('train_2016.csv', header=0, index_col=None, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   parcelid  logerror transactiondate\n",
+      "0  11016594    0.0276      2016-01-01\n",
+      "1  14366692   -0.1684      2016-01-01\n",
+      "2  12098116   -0.0040      2016-01-01\n",
+      "3  12643413    0.0218      2016-01-02\n",
+      "4  14432541   -0.0050      2016-01-02\n",
+      "5  11509835   -0.2705      2016-01-02\n",
+      "6  12286022    0.0440      2016-01-02\n",
+      "7  17177301    0.1638      2016-01-02\n",
+      "8  14739064   -0.0030      2016-01-02\n",
+      "9  14677559    0.0843      2016-01-03\n",
+      "(90811, 3)\n",
+      "90682\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df[:10])\n",
+    "print(train.shape)\n",
+    "print(len(np.unique(train_df['parcelid'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "id_count = train_df['parcelid'].value_counts()\n",
+    "index_dup2 = [i for i, x in enumerate(train_df['parcelid']) if x in id_count[id_count==2].index]\n",
+    "index_dup3 = [i for i, x in enumerate(train_df['parcelid']) if x in id_count[id_count==3].index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "train_dup2 = train_df.ix[index_dup, :].sort_values('parcelid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "train_dup2['month'] = train_dup2['transactiondate'].apply(lambda x:datetime.strptime(x, '%Y-%m-%d').strftime('%m'))\n",
+    "train_dup2['month'] = train_dup2['month'].apply(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "train_dup2 = train_dup2.sort_values(['parcelid', 'month']).reset_index(drop=True)\n",
+    "train_dup2 = train_dup2.drop([90,91,92], axis=0).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>parcelid</th>\n",
+       "      <th>logerror</th>\n",
+       "      <th>transactiondate</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>11729067</td>\n",
+       "      <td>-0.3798</td>\n",
+       "      <td>2016-05-19</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>11729067</td>\n",
+       "      <td>-0.3581</td>\n",
+       "      <td>2016-12-22</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>11735136</td>\n",
+       "      <td>-0.0429</td>\n",
+       "      <td>2016-03-09</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>11735136</td>\n",
+       "      <td>-0.0030</td>\n",
+       "      <td>2016-08-19</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>11742566</td>\n",
+       "      <td>-0.0812</td>\n",
+       "      <td>2016-01-08</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>11742566</td>\n",
+       "      <td>0.0686</td>\n",
+       "      <td>2016-08-04</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>11747818</td>\n",
+       "      <td>-0.2058</td>\n",
+       "      <td>2016-01-26</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>11747818</td>\n",
+       "      <td>-0.1065</td>\n",
+       "      <td>2016-04-14</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>11822007</td>\n",
+       "      <td>0.0421</td>\n",
+       "      <td>2016-06-03</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>11822007</td>\n",
+       "      <td>0.0440</td>\n",
+       "      <td>2016-12-08</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>11845988</td>\n",
+       "      <td>-0.1132</td>\n",
+       "      <td>2016-01-26</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>11845988</td>\n",
+       "      <td>0.0237</td>\n",
+       "      <td>2016-08-16</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>11863325</td>\n",
+       "      <td>0.1089</td>\n",
+       "      <td>2016-01-29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>11863325</td>\n",
+       "      <td>0.1947</td>\n",
+       "      <td>2016-09-09</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>11866315</td>\n",
+       "      <td>-0.0010</td>\n",
+       "      <td>2016-01-12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>11866315</td>\n",
+       "      <td>0.0488</td>\n",
+       "      <td>2016-06-14</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>11913710</td>\n",
+       "      <td>0.0421</td>\n",
+       "      <td>2016-02-29</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>11913710</td>\n",
+       "      <td>0.1621</td>\n",
+       "      <td>2016-12-13</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>12023571</td>\n",
+       "      <td>-0.0305</td>\n",
+       "      <td>2016-03-28</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>12023571</td>\n",
+       "      <td>0.0602</td>\n",
+       "      <td>2016-09-23</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    parcelid  logerror transactiondate  month\n",
+       "80  11729067   -0.3798      2016-05-19      5\n",
+       "81  11729067   -0.3581      2016-12-22     12\n",
+       "82  11735136   -0.0429      2016-03-09      3\n",
+       "83  11735136   -0.0030      2016-08-19      8\n",
+       "84  11742566   -0.0812      2016-01-08      1\n",
+       "85  11742566    0.0686      2016-08-04      8\n",
+       "86  11747818   -0.2058      2016-01-26      1\n",
+       "87  11747818   -0.1065      2016-04-14      4\n",
+       "88  11822007    0.0421      2016-06-03      6\n",
+       "89  11822007    0.0440      2016-12-08     12\n",
+       "90  11845988   -0.1132      2016-01-26      1\n",
+       "91  11845988    0.0237      2016-08-16      8\n",
+       "92  11863325    0.1089      2016-01-29      1\n",
+       "93  11863325    0.1947      2016-09-09      9\n",
+       "94  11866315   -0.0010      2016-01-12      1\n",
+       "95  11866315    0.0488      2016-06-14      6\n",
+       "96  11913710    0.0421      2016-02-29      2\n",
+       "97  11913710    0.1621      2016-12-13     12\n",
+       "98  12023571   -0.0305      2016-03-28      3\n",
+       "99  12023571    0.0602      2016-09-23      9"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dup2[80:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "127"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(id_count==2).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(257, 4)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dup2.shape"
    ]
   },
   {
