--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2004,7 +2004,8 @@
    "cell_type": "code",
    "execution_count": 121,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2197,6 +2198,64 @@
    ],
    "source": [
     "train_dup2[80:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Leslie/anaconda3/lib/python3.5/site-packages/IPython/kernel/__main__.py:6: RuntimeWarning: divide by zero encountered in double_scalars\n"
+     ]
+    }
+   ],
+   "source": [
+    "rates = []\n",
+    "for i in range(int(train_dup2.shape[0]/2)):\n",
+    "    start = train_dup2.ix[2*i, 'logerror']\n",
+    "    end = train_dup2.ix[2*i+1, 'logerror']\n",
+    "    time = train_dup2.ix[2*i+1, 'month'] - train_dup2.ix[2*i, 'month']\n",
+    "    rates.append((end-start)/time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rates = np.array(rates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02236924544989061"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rates[np.isfinite(rates)].mean()"
    ]
   },
   {
