Train Random Forest

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -249,25 +249,25 @@
     {
      "data": {
       "text/plain": [
-       "XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-       "       learning_rate=0.0416198137601932, max_delta_step=0, max_depth=6,\n",
-       "       min_child_weight=58, missing=None, n_estimators=173, nthread=-1,\n",
+       "XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,\n",
+       "       gamma=0.0001, learning_rate=0.064, max_delta_step=0, max_depth=4,\n",
+       "       min_child_weight=1, missing=None, n_estimators=100, nthread=4,\n",
        "       objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-       "       scale_pos_weight=1, seed=0, silent=True,\n",
-       "       subsample=0.3077468004867197)"
+       "       scale_pos_weight=1, seed=1234, silent=True, subsample=1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Score: 0.06955934\n",
-    "params = {'n_estimators': 100, 'learning_rate': 0.0416198137601932, \n",
-    "          'subsample': 0.3077468004867197, \n",
+    "# Score: 0.06943554\n",
+    "params = {'n_estimators': 100, \n",
+    "          'learning_rate': 0.064, \n",
     "          'max_depth': 4,\n",
     "          'nthread': 4,\n",
+    "          'gamma': 0.0001,\n",
     "          'seed': 1234}\n",
     "reg = xgb.XGBRegressor()\n",
     "reg.set_params(**params)"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -283,15 +283,14 @@
     {
      "data": {
       "text/plain": [
-       "XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-       "       learning_rate=0.0416198137601932, max_delta_step=0, max_depth=6,\n",
-       "       min_child_weight=58, missing=None, n_estimators=173, nthread=-1,\n",
+       "XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,\n",
+       "       gamma=0.0001, learning_rate=0.064, max_delta_step=0, max_depth=4,\n",
+       "       min_child_weight=1, missing=None, n_estimators=100, nthread=4,\n",
        "       objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-       "       scale_pos_weight=1, seed=0, silent=True,\n",
-       "       subsample=0.3077468004867197)"
+       "       scale_pos_weight=1, seed=1234, silent=True, subsample=1)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -342,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
@@ -353,18 +352,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 161,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "p_test = 0.97*p_test + 0.03*0.011\n",
+    "# p_test = 0.97*p_test + 0.03*0.011\n",
     "sub = pd.read_csv('sample_submission.csv')\n",
     "for c in sub.columns[sub.columns != 'ParcelId']:\n",
     "    sub[c] = p_test\n",
     "\n",
-    "sub.to_csv('result.csv', index=False, float_format='%.8f')"
+    "sub.to_csv('result_xgb.csv', index=False, float_format='%.8f')"
    ]
   },
   {
@@ -375,6 +374,115 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "scorer_mae = make_scorer(mean_absolute_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = pd.concat([x_train, x_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = x.replace(np.inf, 0)\n",
+    "\n",
+    "for var in x.columns[x_train.dtypes == 'object']:\n",
+    "    x[var] = x[var].fillna(x[var].mode())\n",
+    "    \n",
+    "for var in x.columns[x.dtypes != 'object']:\n",
+    "    x[var] = x[var].fillna(x[var].dropna().mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(90811, 62)"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train = x[:90811]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2985217, 62)\n",
+      "(2985217, 62)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x[90811:].shape)\n",
+    "print(x_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# n_estimators=200  --> 0.07474098\n",
+    "for est in [150,200,250,300]:\n",
+    "    reg = RandomForestRegressor(n_estimators=est)\n",
+    "    cv_score = cross_val_score(reg, x[:90811], y_train, scoring=scorer_mae, cv=3)\n",
+    "    score_mean = cv_score.mean()\n",
+    "    score_std = cv_score.std()\n",
+    "#     if score_mean < 0.0696:\n",
+    "    print('n_estimators:{0}, Mean:{1:.8f}, STD:{2:.8f}'.format(est, score_mean, score_std))"
+   ]
   },
   {
    "cell_type": "markdown",
